tests/error/misc_errors/custom_not_empty.err
Error: Unexpected function body (at $FILE:9:4)
  | 
7 | @guppy.custom(module=module)
8 | def foo(x: int) -> int:
9 |     return x
  |     ^^^^^^^^ Body of custom function `foo` must be empty

Guppy compilation failed due to 1 previous error
